--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     background: #00539F;
-    font-family: ;
+    font-family: 'Open Sans', sans-serif;
+    display: block;
 }
 
 body {
@@ -13,9 +14,21 @@ body {
 
 h1 {
     text-align: center;
+    font-size: 60px;
+    text-shadow: 3px 3px 1px black;
+    color: #00539F;
+    margin: 0;
+    padding: 20px 0px;
 }
 
 img {
     display: block;
     margin: 0 auto;
+}
+
+p,
+li {
+    font-size: 16px;
+    line-height: 2;
+    letter-spacing: 1px;
 }
